tests/macros/trybuild/dmatrix_mismatched_dimensions.stderr
error: Unexpected number of entries in row 1. Expected 3, found 2 entries.
 --> $DIR/dmatrix_mismatched_dimensions.rs:5:13
  |
5 |             4, 5];
  |             ^
